force-app/main/default/objects/Activity/fields/Is_Cancelled__c.field-meta.xml
<CustomField>
    <fullName>Is_Cancelled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>It would be marked true if an event is canceled</description>
    <inlineHelpText>It would be marked true if an event is canceled</inlineHelpText>
    <label>Is Cancelled</label>
    <type>Checkbox</type>
</CustomField>