force-app/main/default/objects/Activity/fields/Joining_URL__c.field-meta.xml
<CustomField>
    <fullName>Joining_URL__c</fullName>
    <description>It contains the unique joining URL value of the meeting for every invitee</description>
    <inlineHelpText>It contains the unique joining URL value of the meeting for every invitee</inlineHelpText>
    <label>Joining URL</label>
    <type>Url</type>
</CustomField>