force-app/main/default/objects/Activity/fields/Zoom_Meeting__c.field-meta.xml
<CustomField>
    <fullName>Zoom_Meeting__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>It contains the meeting Id for which this event is created</description>
    <inlineHelpText>It contains the meeting Id for which this event is created</inlineHelpText>
    <label>Zoom Meeting</label>
    <referenceTo>Zoom_Meeting__c</referenceTo>
    <relationshipLabel>Attendees</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>