force-app/main/default/objects/Activity/fields/Zoom_Meeting_Attendance__c.field-meta.xml
<CustomField>
    <fullName>Zoom_Meeting_Attendance__c</fullName>
    <description>It contains the attendance status of the invitee</description>
    <inlineHelpText>It contains the attendance status of the invitee</inlineHelpText>
    <label>Zoom Meeting Attendance</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Attended</fullName>
                <default>true</default>
                <label>Not Attended</label>
            </value>
            <value>
                <fullName>Attended</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>