force-app/main/default/objects/Activity/fields/Zoom_Registration_Id__c.field-meta.xml
<CustomField>
    <fullName>Zoom_Registration_Id__c</fullName>
    <description>The zoom registration Id returned from zoom API after we add this record as a registrant to a zoom meeting</description>
    <inlineHelpText>The zoom registration Id returned from zoom API after we add this record as a registrant to a zoom meeting</inlineHelpText>
    <label>Zoom Registration Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>