force-app/main/default/objects/Activity/fields/Zoom_Registration_Status__c.field-meta.xml
<CustomField>
    <fullName>Zoom_Registration_Status__c</fullName>
    <description>It contains the zoom Registration status details</description>
    <inlineHelpText>It contains the zoom Registration status details</inlineHelpText>
    <label>Zoom Registration Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Registered</fullName>
            </value>
            <value>
                <fullName>Registered</fullName>
            </value>
            <value>
                <fullName>Interested</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>Initiated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>